--- a/artigo.html
+++ b/artigo.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>5 Dicas de SEO para Iniciantes - Blog</title>
+
     <meta name="description" content="Aprenda as melhores estratégias de SEO para colocar seu site no topo do Google.">
+    
+    <!-- Performance: Preconnect -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://images.unsplash.com">
+
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Orbitron:wght@600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="logo.png" type="image/png">
@@ -51,40 +58,20 @@
         <div class="container">
             <div class="article-header">
                 <a href="index.html#blog" class="back-link">← Voltar para o Blog</a>
-                <span class="blog-category">SEO</span>
-                <h1>5 Dicas de SEO para Iniciantes</h1>
+                <span id="article-category" class="blog-category"></span>
+                <h1 id="article-title">Carregando artigo...</h1>
                 <div class="article-meta">
-                    <span>Por <strong>Cybernex Innovatech</strong></span> • <span>10 Out 2023</span> • <span>5 min de leitura</span>
+                    <span>Por <strong>Cybernex Innovatech</strong></span> • <span id="article-date"></span> • <span id="article-read-time"></span>
                 </div>
             </div>
 
             <div class="article-image">
-                <img src="https://images.unsplash.com/photo-1432888498266-38ffec3eaf0a?auto=format&fit=crop&w=1200&q=80" alt="SEO Básico">
+                <img id="article-img" src="" alt="">
             </div>
 
-            <div class="article-content">
-                <p class="lead">Você sabia que a maioria das experiências online começa com uma pesquisa no Google? Se o seu site não aparece na primeira página, você está perdendo dinheiro. Aqui estão 5 dicas práticas para mudar isso.</p>
-
-                <h2>1. Pesquisa de Palavras-chave</h2>
-                <p>Antes de escrever qualquer coisa, você precisa saber o que seu público está procurando. Ferramentas como Google Keyword Planner e Ubersuggest são essenciais para identificar termos com bom volume de busca e baixa concorrência.</p>
-
-                <h2>2. Conteúdo de Qualidade</h2>
-                <p>O Google prioriza conteúdo que resolve o problema do usuário. Escreva textos originais, bem estruturados e que entreguem valor real. Evite copiar conteúdo de outros sites.</p>
-
-                <h2>3. Otimização On-Page</h2>
-                <p>Certifique-se de que suas páginas tenham:</p>
-                <ul>
-                    <li>Títulos (H1) claros e com a palavra-chave.</li>
-                    <li>Meta descriptions atrativas.</li>
-                    <li>Imagens otimizadas (leves e com texto alternativo).</li>
-                    <li>URLs amigáveis.</li>
-                </ul>
-
-                <h2>4. Velocidade de Carregamento</h2>
-                <p>Sites lentos são penalizados pelo Google. Use ferramentas como o PageSpeed Insights para identificar gargalos e otimizar o código e as imagens do seu site.</p>
-
-                <h2>5. Mobile First</h2>
-                <p>A maioria dos acessos hoje vem de celulares. Se o seu site não for responsivo (não se adaptar a telas pequenas), ele perderá posições no ranking.</p>
+            <div id="article-body" class="article-content">
+                <!-- O conteúdo será injetado aqui pelo JavaScript -->
+                <div class="spinner" style="margin: 50px auto;"></div>
 
                 <div class="article-cta">
                     <h3>Precisa de ajuda com o SEO do seu site?</h3>
