--- a/artigo.html
+++ b/artigo.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>5 Dicas de SEO para Iniciantes - Blog</title>
+    <title>Blog Cybernex - Carregando Artigo...</title>
 
     <meta name="description" content="Aprenda as melhores estratégias de SEO para colocar seu site no topo do Google.">
     
+    <!-- Google Analytics (GA4) - Substitua G-XXXXXXXXXX pelo seu ID -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-XXXXXXXXXX');
+    </script>
+
     <!-- Performance: Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,6 +33,16 @@
     <div id="preloader">
         <div class="spinner"></div>
     </div>
+    <noscript>
+        <style>#preloader { display: none; }</style>
+    </noscript>
+    <!-- Failsafe -->
+    <script>
+        setTimeout(function() {
+            var p = document.getElementById('preloader');
+            if(p) { p.style.opacity = 0; setTimeout(function(){ p.style.display = 'none'; }, 500); }
+        }, 3000);
+    </script>
 
     <!-- Reading Progress Bar -->
     <div class="progress-container">
@@ -129,10 +148,11 @@
                 <div class="footer-col">
                     <h4>Contato</h4>
                     <p>(11) 97667-8655</p>
+                    <p>Atendimento em todo o Brasil</p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 Cybernex Innovatech. Todos os direitos reservados.</p>
+                <p>&copy; <span id="current-year">2023</span> Cybernex Innovatech. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
@@ -142,7 +162,8 @@
         <svg viewBox="0 0 24 24" width="32" height="32" fill="#ffffff"><path d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.893 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.305 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.884-.001 2.225.651 3.891 1.746 5.634l-.999 3.648 3.742-.981zm11.387-5.464c-.074-.124-.272-.198-.57-.347-.297-.149-1.758-.868-2.031-.967-.272-.099-.47-.149-.669.149-.198.297-.768.967-.941 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372-.272.297-1.04 1.017-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414z"/></svg>
     </a>
 
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
-    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js" defer></script>
+    <script src="dados-blog.js" defer></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
