--- a/index.html
+++ b/index.html
@@ -3,32 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cybernex Innovatech - Desenvolvimento Web de Alta Performance</title>
+    <title>Cybernex Innovatech - Criação de Sites para Todo o Brasil</title>
 
-    <meta name="description" content="Sites que transformam visitantes em clientes. Desenvolvimento web profissional e otimizado.">
+    <meta name="description" content="Criação de sites profissionais e otimizados. Atendemos empresas de todos os estados do Brasil com desenvolvimento web de alta performance.">
     
     <!-- SEO Otimizado: Meta Tags Sociais e Controle -->
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#7c3aed">
     <link rel="canonical" href="https://www.cybernex.com.br/">
 
+    <!-- Google Analytics (GA4) - Substitua G-XXXXXXXXXX pelo seu ID -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-XXXXXXXXXX');
+    </script>
+
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.cybernex.com.br/">
-    <meta property="og:title" content="Cybernex Innovatech - Desenvolvimento Web de Alta Performance">
-    <meta property="og:description" content="Sites que transformam visitantes em clientes. Desenvolvimento web profissional e otimizado.">
+    <meta property="og:title" content="Cybernex Innovatech - Criação de Sites para Todo o Brasil">
+    <meta property="og:description" content="Criação de sites profissionais. Atendemos empresas de todos os estados do Brasil com desenvolvimento web de alta performance.">
     <meta property="og:image" content="https://www.cybernex.com.br/social-share.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:title" content="Cybernex Innovatech - Desenvolvimento Web de Alta Performance">
-    <meta property="twitter:description" content="Sites que transformam visitantes em clientes. Desenvolvimento web profissional e otimizado.">
+    <meta property="twitter:title" content="Cybernex Innovatech - Criação de Sites para Todo o Brasil">
+    <meta property="twitter:description" content="Criação de sites profissionais. Atendemos empresas de todos os estados do Brasil com desenvolvimento web de alta performance.">
     <meta property="twitter:image" content="https://www.cybernex.com.br/social-share.jpg">
 
     <!-- Performance: Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://images.unsplash.com">
+
+    <!-- Performance: Preload da Imagem Hero (LCP) -->
+    <link rel="preload" as="image" href="https://images.unsplash.com/photo-1497366216548-37526070297c?auto=format&fit=crop&w=1920&q=80" media="(min-width: 769px)">
+    <link rel="preload" as="image" href="https://images.unsplash.com/photo-1497366216548-37526070297c?auto=format&fit=crop&w=800&q=80" media="(max-width: 768px)">
 
     <!-- Fonte Google (Inter para modernidade) -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Orbitron:wght@600;800&display=swap" rel="stylesheet">
@@ -50,6 +63,16 @@
     <div id="preloader">
         <div class="spinner"></div>
     </div>
+    <noscript>
+        <style>#preloader { display: none; }</style>
+    </noscript>
+    <!-- Failsafe: Garante que o site carregue mesmo se o JS falhar -->
+    <script>
+        setTimeout(function() {
+            var p = document.getElementById('preloader');
+            if(p) { p.style.opacity = 0; setTimeout(function(){ p.style.display = 'none'; }, 500); }
+        }, 3000);
+    </script>
 
     <!-- JSON-LD Schema (Dados Estruturados para Google) -->
     <script type="application/ld+json">
@@ -65,6 +88,10 @@
         "addressRegion": "SP",
         "addressCountry": "BR"
       },
+      "areaServed": {
+        "@type": "Country",
+        "name": "Brazil"
+      },
       "telephone": "+5511976678655",
       "priceRange": "$$",
       "url": "https://www.cybernex.com.br/"
@@ -76,7 +103,7 @@
         <div class="container">
             <nav>
                 <a href="index.html" class="logo">
-                    <img src="logo.png" alt="Cybernex Innovatech">
+                    <img src="logo.png" alt="Cybernex Innovatech" width="200" height="85">
                     <span>Cybernex Innovatech</span>
                 </a>
                 <div class="hamburger">
@@ -104,7 +131,7 @@
                 <svg class="sound-icon on" viewBox="0 0 24 24" width="20" height="20" fill="currentColor"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"/></svg>
                 <svg class="sound-icon off" viewBox="0 0 24 24" width="20" height="20" fill="currentColor" style="display: none;"><path d="M16.5 12c0-1.77-1.02-3.29-2.5-4.03v2.21l2.45 2.45c.03-.2.05-.41.05-.63zm2.5 0c0 .94-.2 1.82-.54 2.64l1.51 1.51C20.63 14.91 21 13.5 21 12c0-4.28-2.99-7.86-7-8.77v2.06c2.89.86 5 3.54 5 6.71zM4.27 3L3 4.27 7.73 9H3v6h4l5 5v-6.73l4.25 4.25c-.67.52-1.42.93-2.25 1.18v2.06c1.38-.31 2.63-.95 3.69-1.81L19.73 21 21 19.73 4.27 3zM12 4L9.91 6.09 12 8.18V4z"/></svg>
             </button>
-            <p>Design profissional e código otimizado para empresas que buscam o próximo nível de faturamento e autoridade digital.</p>
+            <p>Design profissional e código otimizado para empresas de todo o Brasil que buscam o próximo nível de faturamento e autoridade digital.</p>
             <a href="#contato" class="btn btn-cta">Quero um Site Profissional</a>
         </div>
     </section>
@@ -423,16 +450,20 @@
             <h2 class="section-title">Perguntas Frequentes</h2>
             <div class="faq-container">
                 <div class="faq-item">
-                    <button class="faq-question">Quanto tempo demora para ficar pronto? <span>+</span></button>
+                    <button class="faq-question" aria-expanded="false">Quanto tempo demora para ficar pronto? <span>+</span></button>
                     <div class="faq-answer"><p>Depende do projeto. Landing Pages levam em média 5 a 7 dias. Sites institucionais cerca de 15 a 20 dias.</p></div>
                 </div>
                 <div class="faq-item">
-                    <button class="faq-question">O site será meu ou pago aluguel? <span>+</span></button>
+                    <button class="faq-question" aria-expanded="false">O site será meu ou pago aluguel? <span>+</span></button>
                     <div class="faq-answer"><p>O site é 100% seu. Após o pagamento e entrega, você tem total propriedade sobre os arquivos e domínio.</p></div>
                 </div>
                 <div class="faq-item">
-                    <button class="faq-question">Eu consigo alterar textos depois? <span>+</span></button>
+                    <button class="faq-question" aria-expanded="false">Eu consigo alterar textos depois? <span>+</span></button>
                     <div class="faq-answer"><p>Sim! Posso configurar um painel administrativo simples ou oferecer pacotes de manutenção mensal.</p></div>
+                </div>
+                <div class="faq-item">
+                    <button class="faq-question" aria-expanded="false">Vocês atendem minha cidade? <span>+</span></button>
+                    <div class="faq-answer"><p>Sim! Atendemos empresas de todos os estados do Brasil de forma 100% remota, garantindo qualidade e agilidade.</p></div>
                 </div>
             </div>
         </div>
@@ -457,10 +488,6 @@
                     <div class="form-group">
                         <label for="telefone">Telefone / WhatsApp</label>
                         <input type="tel" id="telefone" placeholder="(00) 00000-0000" maxlength="15">
-                    </div>
-                    <div class="form-group">
-                        <label for="cpf">CPF</label>
-                        <input type="text" id="cpf" placeholder="000.000.000-00" maxlength="14">
                     </div>
                     <div class="form-group">
                         <label for="objetivo">Qual o principal objetivo do site?</label>
@@ -508,7 +535,7 @@
                 <div class="footer-col">
                     <h4>Contato</h4>
                     <p>(11) 97667-8655</p>
-                    <p>São Paulo, SP</p>
+                    <p>São Paulo, SP (Atendimento Nacional)</p>
                 </div>
                 <div class="footer-col">
                     <h4>Redes Sociais</h4>
@@ -518,8 +545,18 @@
                     </div>
                 </div>
             </div>
+            
+            <!-- SEO: Cobertura Nacional (Estados e Capitais) -->
+            <div class="footer-locations" style="border-top: 1px solid #334155; margin-top: 30px; padding-top: 20px; text-align: left;">
+                <h5 style="color: #e2e8f0; margin-bottom: 10px; font-size: 0.9rem;">Atendimento em todo o território nacional:</h5>
+                <p style="font-size: 0.75rem; color: #64748b; line-height: 1.6;">
+                    <strong>AC:</strong> <a href="local.html?geo=rio-branco">Rio Branco</a> | <strong>AL:</strong> <a href="local.html?geo=maceio">Maceió</a> | <strong>AP:</strong> <a href="local.html?geo=macapa">Macapá</a> | <strong>AM:</strong> <a href="local.html?geo=manaus">Manaus</a> | <strong>BA:</strong> <a href="local.html?geo=salvador">Salvador</a> | <strong>CE:</strong> <a href="local.html?geo=fortaleza">Fortaleza</a> | <strong>DF:</strong> <a href="local.html?geo=brasilia">Brasília</a> | <strong>ES:</strong> <a href="local.html?geo=vitoria">Vitória</a> | <strong>GO:</strong> <a href="local.html?geo=goiania">Goiânia</a> | <strong>MA:</strong> <a href="local.html?geo=sao-luis">São Luís</a> | <strong>MT:</strong> <a href="local.html?geo=cuiaba">Cuiabá</a> | <strong>MS:</strong> <a href="local.html?geo=campo-grande">Campo Grande</a> | <strong>MG:</strong> <a href="local.html?geo=belo-horizonte">Belo Horizonte</a> | <strong>PA:</strong> <a href="local.html?geo=belem">Belém</a> | <strong>PB:</strong> <a href="local.html?geo=joao-pessoa">João Pessoa</a> | <strong>PR:</strong> <a href="local.html?geo=curitiba">Curitiba</a> | <strong>PE:</strong> <a href="local.html?geo=recife">Recife</a> | <strong>PI:</strong> <a href="local.html?geo=teresina">Teresina</a> | <strong>RJ:</strong> <a href="local.html?geo=rio-de-janeiro">Rio de Janeiro</a> | <strong>RN:</strong> <a href="local.html?geo=natal">Natal</a> | <strong>RS:</strong> <a href="local.html?geo=porto-alegre">Porto Alegre</a> | <strong>RO:</strong> <a href="local.html?geo=porto-velho">Porto Velho</a> | <strong>RR:</strong> <a href="local.html?geo=boa-vista">Boa Vista</a> | <strong>SC:</strong> <a href="local.html?geo=florianopolis">Florianópolis</a> | <strong>SP:</strong> <a href="local.html?geo=sao-paulo">São Paulo</a> | <strong>SE:</strong> <a href="local.html?geo=aracaju">Aracaju</a> | <strong>TO:</strong> <a href="local.html?geo=palmas">Palmas</a>. <br>
+                    <span style="display: block; margin-top: 5px;">Incluindo todas as cidades do interior e regiões metropolitanas, com destaque para: <a href="local.html?geo=campinas">Campinas</a>, <a href="local.html?geo=sao-jose-dos-campos">S. J. dos Campos</a>, <a href="local.html?geo=ribeirao-preto">Ribeirão Preto</a>, <a href="local.html?geo=sorocaba">Sorocaba</a> e <a href="local.html?geo=sao-jose-do-rio-preto">S. J. do Rio Preto</a>.</span>
+                </p>
+            </div>
+
             <div class="footer-bottom">
-                <p>&copy; 2023 Cybernex Innovatech. Todos os direitos reservados. CNPJ: 00.000.000/0001-00</p>
+                <p>&copy; <span id="current-year">2023</span> Cybernex Innovatech. Todos os direitos reservados. CNPJ: 00.000.000/0001-00</p>
             </div>
         </div>
     </footer>
@@ -545,7 +582,7 @@
     </div>
 
     <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
-    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js" defer></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
