--- a/index.html
+++ b/index.html
@@ -98,6 +98,57 @@
     }
     </script>
 
+    <!-- SEO: FAQ Schema (Rich Snippets) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [{
+        "@type": "Question",
+        "name": "Quanto tempo demora para ficar pronto?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Depende do projeto. Landing Pages levam em média 5 a 7 dias. Sites institucionais cerca de 15 a 20 dias."
+        }
+      }, {
+        "@type": "Question",
+        "name": "O site será meu ou pago aluguel?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "O site é 100% seu. Após o pagamento e entrega, você tem total propriedade sobre os arquivos e domínio."
+        }
+      }, {
+        "@type": "Question",
+        "name": "Eu consigo alterar textos depois?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Sim! Posso configurar um painel administrativo simples ou oferecer pacotes de manutenção mensal."
+        }
+      }, {
+        "@type": "Question",
+        "name": "Vocês atendem minha cidade?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Sim! Atendemos empresas de todos os estados do Brasil de forma 100% remota, garantindo qualidade e agilidade."
+        }
+      }]
+    }
+    </script>
+
+    <!-- SEO: Breadcrumb Schema (Trilha de Navegação) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [{
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.cybernex.com.br/"
+      }]
+    }
+    </script>
+
     <!-- 1. Header -->
     <header>
         <div class="container">
