--- a/local.html
+++ b/local.html
@@ -72,6 +72,7 @@
         </div>
     </header>
 
+    <main>
     <!-- Hero Section Dinâmica -->
     <section class="hero-local">
         <div class="container">
@@ -134,6 +135,7 @@
             </div>
         </div>
     </section>
+    </main>
 
     <!-- Footer -->
     <footer>
