--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <meta name="theme-color" content="#7c3aed">
     <link rel="canonical" href="https://www.cybernex.com.br/">
 
+    <!-- RSS Feed -->
+    <link rel="alternate" type="application/rss+xml" title="RSS Feed Blog Cybernex" href="/rss.xml">
+
     <!-- Google Analytics (GA4) - Substitua G-XXXXXXXXXX pelo seu ID -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
     <script>
@@ -94,7 +97,27 @@
       },
       "telephone": "+5511976678655",
       "priceRange": "$$",
-      "url": "https://www.cybernex.com.br/"
+      "url": "https://www.cybernex.com.br/",
+      "hasOfferCatalog": {
+        "@type": "OfferCatalog",
+        "name": "Serviços de Desenvolvimento Web",
+        "itemListElement": [
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "Criação de Sites Institucionais"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "Desenvolvimento de E-commerce e Lojas Virtuais"
+            }
+          }
+        ]
+      }
     }
     </script>
 
@@ -213,13 +236,13 @@
             <h3 class="partners-title">Empresas que confiam no meu trabalho</h3>
             <div class="logo-scroller">
                 <ul class="logo-scroller__inner">
-                    <li><img src="marca1.png" alt="Logo Marca 1" loading="lazy"></li>
-                    <li><img src="marca2.png" alt="Logo Marca 2" loading="lazy"></li>
-                    <li><img src="marca3.png" alt="Logo Marca 3" loading="lazy"></li>
-                    <li><img src="marca4.png" alt="Logo Marca 4" loading="lazy"></li>
-                    <li><img src="marca5.png" alt="Logo Marca 5" loading="lazy"></li>
-                    <li><img src="marca6.png" alt="Logo Marca 6" loading="lazy"></li>
-                    <li><img src="marca7.png" alt="Logo Marca 7" loading="lazy"></li>
+                    <li><img src="marca1.png" alt="Logo Marca 1" loading="lazy" width="150" height="80"></li>
+                    <li><img src="marca2.png" alt="Logo Marca 2" loading="lazy" width="150" height="80"></li>
+                    <li><img src="marca3.png" alt="Logo Marca 3" loading="lazy" width="150" height="80"></li>
+                    <li><img src="marca4.png" alt="Logo Marca 4" loading="lazy" width="150" height="80"></li>
+                    <li><img src="marca5.png" alt="Logo Marca 5" loading="lazy" width="150" height="80"></li>
+                    <li><img src="marca6.png" alt="Logo Marca 6" loading="lazy" width="150" height="80"></li>
+                    <li><img src="marca7.png" alt="Logo Marca 7" loading="lazy" width="150" height="80"></li>
                 </ul>
             </div>
         </div>
@@ -281,21 +304,21 @@
             <div class="portfolio-grid">
                 <!-- Placeholder para Imagens -->
                 <div class="project-card hidden">
-                    <img src="site1.png" alt="Projeto Ventus" loading="lazy">
+                    <img src="site1.png" alt="Projeto Ventus" loading="lazy" width="400" height="300">
                     <div class="project-info">
                         <h4>Ventus</h4>
                         <p>Site Institucional + Blog</p>
                     </div>
                 </div>
                 <div class="project-card hidden delay-100">
-                    <img src="site2.png" alt="Projeto Soluciona" loading="lazy">
+                    <img src="site2.png" alt="Projeto Soluciona" loading="lazy" width="400" height="300">
                     <div class="project-info">
                         <h4>Soluciona</h4>
                         <p>Landing Page de Alta Conversão</p>
                     </div>
                 </div>
                 <div class="project-card hidden delay-200">
-                    <img src="site3.png" alt="Criativa Visual" loading="lazy">
+                    <img src="site3.png" alt="Criativa Visual" loading="lazy" width="400" height="300">
                     <div class="project-info">
                         <h4>Criativa Visual</h4>
                         <p>E-commerce de Moda</p>
@@ -319,7 +342,7 @@
                 <!-- Artigo 1 -->
                 <article class="blog-card hidden">
                     <div class="blog-image">
-                        <img src="https://images.unsplash.com/photo-1432888498266-38ffec3eaf0a?auto=format&fit=crop&w=600&q=80" alt="SEO Básico" loading="lazy">
+                        <img src="https://images.unsplash.com/photo-1432888498266-38ffec3eaf0a?auto=format&fit=crop&w=600&q=80" alt="SEO Básico" loading="lazy" width="600" height="400">
                         <span class="blog-category">SEO</span>
                     </div>
                     <div class="blog-content">
@@ -334,7 +357,7 @@
                 <!-- Artigo 2 -->
                 <article class="blog-card hidden delay-100">
                     <div class="blog-image">
-                        <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?auto=format&fit=crop&w=600&q=80" alt="Performance Web" loading="lazy">
+                        <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?auto=format&fit=crop&w=600&q=80" alt="Performance Web" loading="lazy" width="600" height="400">
                         <span class="blog-category">Performance</span>
                     </div>
                     <div class="blog-content">
@@ -349,7 +372,7 @@
                 <!-- Artigo 3 -->
                 <article class="blog-card hidden delay-200">
                     <div class="blog-image">
-                        <img src="https://images.unsplash.com/photo-1533750349088-cd871a92f312?auto=format&fit=crop&w=600&q=80" alt="Marketing Digital" loading="lazy">
+                        <img src="https://images.unsplash.com/photo-1533750349088-cd871a92f312?auto=format&fit=crop&w=600&q=80" alt="Marketing Digital" loading="lazy" width="600" height="400">
                         <span class="blog-category">Marketing</span>
                     </div>
                     <div class="blog-content">
@@ -364,7 +387,7 @@
                 <!-- Artigo 4 -->
                 <article class="blog-card hidden">
                     <div class="blog-image">
-                        <img src="https://images.unsplash.com/photo-1499951360447-b19be8fe80f5?auto=format&fit=crop&w=600&q=80" alt="Web Design" loading="lazy">
+                        <img src="https://images.unsplash.com/photo-1499951360447-b19be8fe80f5?auto=format&fit=crop&w=600&q=80" alt="Web Design" loading="lazy" width="600" height="400">
                         <span class="blog-category">Design</span>
                     </div>
                     <div class="blog-content">
@@ -379,7 +402,7 @@
                 <!-- Artigo 5 -->
                 <article class="blog-card hidden">
                     <div class="blog-image">
-                        <img src="https://images.unsplash.com/photo-1504868584819-f8e8b4b6d7e3?auto=format&fit=crop&w=600&q=80" alt="Analytics" loading="lazy">
+                        <img src="https://images.unsplash.com/photo-1504868584819-f8e8b4b6d7e3?auto=format&fit=crop&w=600&q=80" alt="Analytics" loading="lazy" width="600" height="400">
                         <span class="blog-category">Dados</span>
                     </div>
                     <div class="blog-content">
@@ -394,7 +417,7 @@
                 <!-- Artigo 6 -->
                 <article class="blog-card hidden">
                     <div class="blog-image">
-                        <img src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?auto=format&fit=crop&w=600&q=80" alt="Email Marketing" loading="lazy">
+                        <img src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?auto=format&fit=crop&w=600&q=80" alt="Email Marketing" loading="lazy" width="600" height="400">
                         <span class="blog-category">Marketing</span>
                     </div>
                     <div class="blog-content">
@@ -570,7 +593,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-col">
-                    <img src="logo.png" alt="Cybernex Innovatech" class="footer-logo">
+                    <img src="logo.png" alt="Cybernex Innovatech" class="footer-logo" width="150" height="64">
                     <h4>Cybernex Innovatech</h4>
                     <p>Desenvolvimento web estratégico focado em resultados reais para sua empresa.</p>
                 </div>
@@ -591,7 +614,8 @@
                 <div class="footer-col">
                     <h4>Redes Sociais</h4>
                     <div class="social-links">
-                        <a href="#" aria-label="LinkedIn"><svg viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg></a>
+                        <a href="https://www.instagram.com/cybernexinnovatech?igsh=eHF1OGNmNXlrbDYx" aria-label="Instagram" target="_blank"><svg viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/></svg></a>
+                        <a href="https://wa.me/5511976678655" aria-label="WhatsApp" target="_blank"><svg viewBox="0 0 24 24"><path d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.893 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.305 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.884-.001 2.225.651 3.891 1.746 5.634l-.999 3.648 3.742-.981zm11.387-5.464c-.074-.124-.272-.198-.57-.347-.297-.149-1.758-.868-2.031-.967-.272-.099-.47-.149-.669.149-.198.297-.768.967-.941 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372-.272.297-1.04 1.017-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414z"/></svg></a>
                         <a href="#" aria-label="GitHub"><svg viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg></a>
                     </div>
                 </div>
@@ -607,7 +631,7 @@
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; <span id="current-year">2023</span> Cybernex Innovatech. Todos os direitos reservados. CNPJ: 00.000.000/0001-00</p>
+                <p>&copy; <span id="current-year">2023</span> Cybernex Innovatech. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
