--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cybernex Innovatech - Criação de Sites para Todo o Brasil</title>
 
-    <meta name="description" content="Desenvolvimento de sites de alta performance e SEO para empresas. Aumente suas vendas com um site rápido, seguro e otimizado para o Google. Orçamento online!">
+    <meta name="description" content="Criação de sites profissionais e Landing Pages para empresas de todo o Brasil. Desenvolvimento web de alta performance, SEO e tráfego pago. Peça seu orçamento!">
+    <meta name="keywords" content="criação de sites, desenvolvimento web, landing page, site institucional, SEO, programador web, web design brasil">
     
     <!-- SEO Otimizado: Meta Tags Sociais e Controle -->
     <meta name="robots" content="index, follow">
@@ -53,6 +54,9 @@
     <link rel="icon" href="logo.png" type="image/png">
 
     <!-- SEO AUTOMÁTICO: JSON-LD -->
+    
+
+    <!-- SEO AUTOMÁTICO: JSON-LD -->
     <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -77,6 +81,16 @@
         "latitude": -23.55052,
         "longitude": -46.633308
       },
+      "areaServed": {
+        "@type": "Country",
+        "name": "Brazil"
+      },
+      "knowsAbout": [
+        "Web Development",
+        "SEO",
+        "Digital Marketing",
+        "E-commerce"
+      ],
       "openingHoursSpecification": {
         "@type": "OpeningHoursSpecification",
         "dayOfWeek": [
