--- a/index_backup_webp.html
+++ b/index_backup_webp.html
@@ -51,7 +51,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Orbitron:wght@600;800&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="logo.webp" type="image/png">
+    <link rel="icon" href="logo.png" type="image/png">
 
     <!-- SEO AUTOMÁTICO: JSON-LD -->
     
@@ -65,7 +65,7 @@
       "@context": "https://schema.org",
       "@type": "ProfessionalService",
       "name": "Cybernex Innovatech",
-      "image": "https://www.cybernex.com.br/logo.webp",
+      "image": "https://www.cybernex.com.br/logo.png",
       "@id": "https://www.cybernex.com.br",
       "url": "https://www.cybernex.com.br",
       "telephone": "+5511976678655",
@@ -233,7 +233,7 @@
         <div class="container">
             <nav>
                 <a href="index.html" class="logo">
-                    <img src="logo.webp" alt="Cybernex Innovatech" width="200" height="85">
+                    <img src="logo.png" alt="Cybernex Innovatech" width="200" height="85">
                     <span>Cybernex Innovatech</span>
                 </a>
                 <div class="hamburger">
@@ -292,13 +292,13 @@
             <h3 class="partners-title">Empresas que confiam no meu trabalho</h3>
             <div class="logo-scroller">
                 <ul class="logo-scroller__inner">
-                    <li><img src="marca1.webp" alt="Logo Marca 1" loading="lazy" width="150" height="80"></li>
-                    <li><img src="marca2.webp" alt="Logo Marca 2" loading="lazy" width="150" height="80"></li>
-                    <li><img src="marca3.webp" alt="Logo Marca 3" loading="lazy" width="150" height="80"></li>
-                    <li><img src="marca4.webp" alt="Logo Marca 4" loading="lazy" width="150" height="80"></li>
-                    <li><img src="marca5.webp" alt="Logo Marca 5" loading="lazy" width="150" height="80"></li>
-                    <li><img src="marca6.webp" alt="Logo Marca 6" loading="lazy" width="150" height="80"></li>
-                    <li><img src="marca7.webp" alt="Logo Marca 7" loading="lazy" width="150" height="80"></li>
+                    <li><img src="marca1.png" alt="Logo Marca 1" loading="lazy" width="150" height="80"></li>
+                    <li><img src="marca2.png" alt="Logo Marca 2" loading="lazy" width="150" height="80"></li>
+                    <li><img src="marca3.png" alt="Logo Marca 3" loading="lazy" width="150" height="80"></li>
+                    <li><img src="marca4.png" alt="Logo Marca 4" loading="lazy" width="150" height="80"></li>
+                    <li><img src="marca5.png" alt="Logo Marca 5" loading="lazy" width="150" height="80"></li>
+                    <li><img src="marca6.png" alt="Logo Marca 6" loading="lazy" width="150" height="80"></li>
+                    <li><img src="marca7.png" alt="Logo Marca 7" loading="lazy" width="150" height="80"></li>
                 </ul>
             </div>
         </div>
@@ -483,21 +483,21 @@
             <div class="portfolio-grid">
                 <!-- Placeholder para Imagens -->
                 <div class="project-card hidden">
-                    <img src="site1.webp" alt="Projeto Ventus" loading="lazy" width="400" height="300">
+                    <img src="site1.png" alt="Projeto Ventus" loading="lazy" width="400" height="300">
                     <div class="project-info">
                         <h4>Ventus</h4>
                         <p>Site Institucional + Blog</p>
                     </div>
                 </div>
                 <div class="project-card hidden delay-100">
-                    <img src="site2.webp" alt="Projeto Soluciona" loading="lazy" width="400" height="300">
+                    <img src="site2.png" alt="Projeto Soluciona" loading="lazy" width="400" height="300">
                     <div class="project-info">
                         <h4>Soluciona</h4>
                         <p>Landing Page de Alta Conversão</p>
                     </div>
                 </div>
                 <div class="project-card hidden delay-200">
-                    <img src="site3.webp" alt="Criativa Visual" loading="lazy" width="400" height="300">
+                    <img src="site3.png" alt="Criativa Visual" loading="lazy" width="400" height="300">
                     <div class="project-info">
                         <h4>Criativa Visual</h4>
                         <p>E-commerce de Moda</p>
@@ -819,7 +819,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-col">
-                    <img src="logo.webp" alt="Cybernex Innovatech" class="footer-logo" width="150" height="64">
+                    <img src="logo.png" alt="Cybernex Innovatech" class="footer-logo" width="150" height="64">
                     <h4>Cybernex Innovatech</h4>
                     <p>Desenvolvimento web estratégico focado em resultados reais para sua empresa.</p>
                 </div>
