--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- SEO Otimizado: Meta Tags Sociais e Controle -->
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#7c3aed">
-    <link rel="canonical" href="https://www.cybernex.com.br/">
+    <link rel="canonical" href="https://www.cybernexinnovatech.com.br/">
 
     <!-- RSS Feed -->
     <link rel="alternate" type="application/rss+xml" title="RSS Feed Blog Cybernex" href="/rss.xml">
@@ -27,16 +27,16 @@
 
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.cybernex.com.br/">
+    <meta property="og:url" content="https://www.cybernexinnovatech.com.br/">
     <meta property="og:title" content="Cybernex Innovatech - Criação de Sites para Todo o Brasil">
-    <meta property="og:description" content="Criação de sites profissionais. Atendemos empresas de todos os estados do Brasil com desenvolvimento web de alta performance.">
-    <meta property="og:image" content="https://www.cybernex.com.br/social-share.jpg">
+    <meta property="og:description" content="Criação de Sites, Landing Pages, CRM, Otimização de Sites e SEO. Transforme visitantes em clientes com a Cybernex.">
+    <meta property="og:image" content="https://www.cybernexinnovatech.com.br/logo.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Cybernex Innovatech - Criação de Sites para Todo o Brasil">
-    <meta property="twitter:description" content="Criação de sites profissionais. Atendemos empresas de todos os estados do Brasil com desenvolvimento web de alta performance.">
-    <meta property="twitter:image" content="https://www.cybernex.com.br/social-share.jpg">
+    <meta property="twitter:description" content="Criação de Sites, Landing Pages, CRM, Otimização de Sites e SEO. Transforme visitantes em clientes com a Cybernex.">
+    <meta property="twitter:image" content="https://www.cybernexinnovatech.com.br/logo.png">
 
     <!-- Performance: Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -65,9 +65,9 @@
       "@context": "https://schema.org",
       "@type": "ProfessionalService",
       "name": "Cybernex Innovatech",
-      "image": "https://www.cybernex.com.br/logo.webp",
-      "@id": "https://www.cybernex.com.br",
-      "url": "https://www.cybernex.com.br",
+      "image": "https://www.cybernexinnovatech.com.br/logo.png",
+      "@id": "https://www.cybernexinnovatech.com.br",
+      "url": "https://www.cybernexinnovatech.com.br",
       "telephone": "+5511976678655",
       "priceRange": "$$",
       "address": {
@@ -183,10 +183,10 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "Cybernex Innovatech",
-      "url": "https://www.cybernex.com.br",
+      "url": "https://www.cybernexinnovatech.com.br",
       "potentialAction": {
         "@type": "SearchAction",
-        "target": "https://www.cybernex.com.br/search?q={search_term_string}",
+        "target": "https://www.cybernexinnovatech.com.br/search?q={search_term_string}",
         "query-input": "required name=search_term_string"
       }
     }
